<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginLeft="185dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:contentDescription="@string/txtTitle"
        android:text="@string/txtTitle"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        tools:text="@string/txtTitle" />

    <ImageView
        android:id="@+id/imgRestaurant"
        android:layout_width="312dp"
        android:layout_height="293dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/restaurant" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="158dp"
        android:layout_marginRight="158dp"
        android:contentDescription="@string/btnNext"
        android:text="@string/btnNext"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRestaurant"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/btnNext" />
</androidx.constraintlayout.widget.ConstraintLayout>